--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -155,7 +155,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Amount</mat-label>
-                        <input matInput name="MobileNo2" type="number" [(ngModel)]="data.Amount" required />
+                        <input matInput name="MobileNo2" type="number" min="0" [(ngModel)]="data.Amount" required />
                         <mat-error>Amount is required</mat-error>
                     </mat-form-field>
                 </div>
