--- a/web1/src/app/company-payment/payroll/payroll.component.html
+++ b/web1/src/app/company-payment/payroll/payroll.component.html
@@ -175,15 +175,15 @@
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>LeaveDays</mat-label>
-                                <input matInput name="LeaveDays" type="number" [(ngModel)]="data.LeaveDays" required />
-                                <mat-error>LeaveDays</mat-error>
+                                <input matInput name="LeaveDays" type="number" min="0" [(ngModel)]="data.LeaveDays" required />
+                                <mat-error>Invalid Value</mat-error>
                             </mat-form-field>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>Salary</mat-label>
-                                <input matInput name="Salary" type="number" [(ngModel)]="data.Salary" required />
-                                <mat-error>Salary is required</mat-error>
+                                <input matInput name="Salary" type="number" min="0" [(ngModel)]="data.Salary" required />
+                                <mat-error>Invalid Value</mat-error>
                             </mat-form-field>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
