--- a/web1/src/app/company-payment/petty-cash/petty-cash.component.html
+++ b/web1/src/app/company-payment/petty-cash/petty-cash.component.html
@@ -159,7 +159,7 @@
                         <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>Amount</mat-label>
-                                <input matInput name="Amount" type="number" [(ngModel)]="data.Amount" required />
+                                <input matInput name="Amount" type="number" min="0" [(ngModel)]="data.Amount" required />
                                 <mat-error>Amount is required</mat-error>
                             </mat-form-field>
                         </div>
