--- a/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.css
+++ b/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.css
@@ -50,3 +50,9 @@
   font-size: 10px;
   color: #000;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
