--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -28,6 +28,13 @@ $OguruPro-theme: mat.define-light-theme((
     warn: $OguruPro-warn,
   )
 ));
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .mat-form-field {
     font-size: inherit;
     font-weight: 400;
